# static/swagger.json
@@ -3,7 +3,7 @@
   "info": {
     "description": "sean",
     "version": "1.0.0",
-    "title": "Seans-Python3-Flask-Rest-Boilerplate",
+    "title": "Find your desired hotel room",
     "license": {
       "name": "MIT",
       "url": "https://opensource.org/licenses/MIT"
@@ -16,169 +16,127 @@
   ],
   "tags": [
     {
-      "name": "Book Request",
-      "description": "Example API for requesting and return book requests"
+      "name": "Hotel Request",
+      "description": "Example API for requesting and return hotel requests"
     }
   ],
   "paths": {
-    "/request": {
-      "get": {
-        "tags": [
-          "Book Request"
-        ],
-        "summary": "Returns bookRequests",
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "$ref": "#/components/schemas/bookRequests"
-            }
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "Book Request"
-        ],
-        "summary": "Create a new book request system",
-        "requestBody": {
-          "description": "Book Request Post Object",
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/bookRequestPostBody"
-              }
-            }
-          }
-        },
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "201": {
-            "description": "OK",
-            "schema": {
-              "$ref": "#/components/schemas/id"
-            }
-          },
-          "400": {
-            "description": "Failed. Bad post data."
-          }
-        }
-      }
-    },
-    "/unprotected/{id}": {
+    
+    "/hotel": {
       "parameters": [
         {
-          "name": "id",
-          "in": "path",
-          "required": true,
-          "description": "ID of the cat that we want to match",
+          "name": "title",
+          "in": "query",
+          "required": false,
+          "description": "Title of the hotel that we want to match",
+          "type": "string"
+        },
+        {
+          "name": "bedroom",
+          "in": "query",
+          "required": false,
+          "description": "No of Bedroom of the hotel that we want to match",
+          "type": "string"
+        },
+        {
+          "name": "bathroom",
+          "in": "query",
+          "required": false,
+          "description": "No of bathroom of the hotel that we want to match",
+          "type": "string"
+        },
+        {
+          "name": "sleep",
+          "in": "query",
+          "required": false,
+          "description": "How many persons can sleep",
+          "type": "string"
+        },
+        {
+          "name": "price",
+          "in": "query",
+          "required": false,
+          "description": "Price (range: $50-$250) of the hotel that we want to match",
+          "type": "string"
+        },
+        {
+          "name": "location",
+          "in": "query",
+          "required": false,
+          "description": "Location of the hotel that we want to match",
           "type": "string"
         }
       ],
       "get": {
         "tags": [
-          "Book Request"
+          "Hotel Request"
         ],
-        "summary": "Get book request with given ID",
+        "summary": "Get hotel request with given fields",
         "parameters": [
           {
-            "in": "path",
-            "name": "id",
-            "required": true,
-            "description": "Book Request id",
+            "in": "query",
+            "name": "title",
+            "required": false,
+            "description": "Hotel Request title",
             "schema": {
-              "$ref": "#/components/schemas/id"
+              "$ref": "#/components/schemas/title"
+            }
+          },
+          {
+            "in": "query",
+            "name": "bedroom",
+            "required": false,
+            "description": "Hotel Request bedroom",
+            "schema": {
+              "$ref": "#/components/schemas/bedroom"
+            }
+          },
+          {
+            "in": "query",
+            "name": "bathroom",
+            "required": false,
+            "description": "Hotel Request bathroom",
+            "schema": {
+              "$ref": "#/components/schemas/bathroom"
+            }
+          },
+          {
+            "in": "query",
+            "name": "sleep",
+            "required": false,
+            "description": "Hotel Request sleep",
+            "schema": {
+              "$ref": "#/components/schemas/sleep"
+            }
+          },
+          {
+            "in": "query",
+            "name": "price",
+            "required": false,
+            "description": "Hotel Request price",
+            "schema": {
+              "$ref": "#/components/schemas/price"
+            }
+          },
+          {
+            "in": "query",
+            "name": "location",
+            "required": false,
+            "description": "Hotel Request location",
+            "schema": {
+              "$ref": "#/components/schemas/location"
             }
           }
         ],
         "responses": {
           "200": {
-            "description": "OK",
-            "schema": {
-              "$ref": "#/components/schemas/bookRequest"
-            }
+            "description": "OK"
           },
           "400": {
             "description": "Failed. Misunderstood Request."
           },
           "404": {
-            "description": "Failed. Book request not found."
-          }
-        }
-      },
-      "put": {
-        "summary": "edit a book request by ID",
-        "tags": [
-          "Book Request"
-        ],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "id",
-            "required": true,
-            "description": "Book Request id",
-            "schema": {
-              "$ref": "#/components/schemas/id"
-            }
-          }
-        ],
-        "requestBody": {
-          "description": "Book Request Object",
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/bookRequest"
-              }
-            }
-          }
-        },
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "$ref": "#/components/schemas/bookRequest"
-            }
-          },
-          "400": {
-            "description": "Failed. Bad post data."
-          }
-        }
-      },
-      "delete": {
-        "summary": "Delete Book Request by ID",
-        "tags": [
-          "Book Request"
-        ],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "id",
-            "required": true,
-            "description": "Book Request Id",
-            "schema": {
-              "$ref": "#/components/schemas/id"
-            }
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "OK",
-            "schema": {
-              "$ref": "#/components/schemas/id"
-            }
-          },
-          "400": {
-            "description": "Failed. Misunderstood Request."
-          },
-          "404": {
-            "description": "Failed. Book Request not found."
+            "description": "Failed. Hotel request not found."
           }
         }
       }
@@ -186,51 +144,45 @@
   },
   "components": {
     "schemas": {
-      "id": {
+      "title": {
         "properties": {
-          "uuid": {
+          "title": {
             "type": "string"
           }
         }
       },
-      "bookRequestPostBody": {
-        "type": "object",
+      "bedroom": {
         "properties": {
-          "title": {
-            "type": "string",
-            "format": "string"
-          },
-          "email": {
-            "type": "string",
-            "format": "email"
+          "bed": {
+            "type": "string"
           }
         }
       },
-      "bookRequest": {
-        "type": "object",
+      "bathroom": {
         "properties": {
-          "title": {
-            "type": "string",
-            "format": "string"
-          },
-          "email": {
-            "type": "string",
-            "format": "email"
-          },
-          "timestamp": {
-            "type": "string",
-            "format": "number"
+          "bath": {
+            "type": "string"
           }
         }
       },
-      "bookRequests": {
-        "type": "object",
+      "sleep": {
         "properties": {
-          "bookRequest": {
-            "type": "object",
-            "additionalProperties": {
-              "$ref": "#/components/schemas/bookRequest"
-            }
+          "amount": {
+            "type": "string"
+          }
+        }
+      },
+      "price": {
+        "properties": {
+          "amount": {
+            "type": "string"
+          }
+        }
+      },
+      "location": {
+        "properties": {
+          "locationName": {
+            "type": "string"
           }
         }
       }
